<resources>
    <string name="app_name">CET</string>
    <string name="img">img</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开即可刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_get_more_label">上拉加载更多</string>
    <string name="pull_to_refresh_release_more_label">松开即可加载</string>
    <string name="pull_to_refresh_refreshing_more_label">正在加载…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_get_more_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_more_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_more_label</string>
    <string name="main_home">推荐</string>
    <string name="main_loan_list">理财</string>
    <string name="no_more_msg">没有更多数据！</string>
    <string name="main_my_prof">资产</string>
    <string name="main_more">更多</string>
    <string name="phone_num">手机号</string>
    <string name="data_loading_please_wait">数据加载中，请稍后&#8230;</string>
    <string name="data_loading_failure_please_retry">数据加载失败，点击重试！</string>
    <string name="password">密码</string>
    <string name="set_login_password">设置您的登录密码</string>
    <string name="confirm_login_password">确认登录密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="complete">完成</string>
    <string name="free_register">免费注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="login_pwd">登录密码</string>
    <string name="next_step">下一步</string>
    <string name="complete_regist">完    成</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="gesture_retry_setting_psw">重新设置手势密码</string>
    <string name="gesture_forget_psw">忘记手势密码</string>
    <string name="gesture_other_account_login">其他账号登录</string>
    <string name="login_login">登&#160;&#160;录</string>
    <string name="register">注册</string>
    <string name="register_tip0">请输入手机号注册或登录</string>
    <string name="register_tip1">一起好不会在任何地方泄露您的号码</string>
    <string name="register_tip2">注册视为同意一起好理财协议</string>
    <string name="register_step2_send_sms_tip">已向%1$s发送短信，请注意查收</string>
    <string name="find_login_pwd_tip">已向%1$s发送短信，请注意查收</string>
    <string name="register_step3_set_pwd_tip">设置一下密码以保证您的账号安全</string>
    <string name="risk_controll_brand">品&#160;&#160;&#160;牌：</string>
    <string name="risk_controll_brand_type">品牌型号：</string>
    <string name="risk_controll_car_color">车身颜色：</string>
    <string name="risk_controll_fuel">燃&#160;&#160;&#160;料：</string>
    <string name="risk_controll_cc">排&#160;&#160;&#160;量：</string>
    <string name="risk_controll_run_distance">行驶公里数：</string>
    <string name="risk_controll_buy_time">购买时间：</string>
    <string name="risk_controll_buy_price">购买价格：</string>
    <string name="risk_controll_evaluated_price">评&#160;估&#160;价：</string>
    <string name="risk_controll_evaluated_check">评估审核：</string>
    <string name="risk_controll_guaranty_style">担保方式：</string>
    <string name="risk_controll_related_data">相关资料图片：</string>
    <string name="project_info_loaction">所在地</string>
    <string name="project_info_loan_use">贷款用途</string>
    <string name="project_info_payback_type">还款方式</string>
    <string name="project_info_borrower_basic_info">借款人基本情况描述：</string>
    <string name="project_info_loan_contract">打款记录及合同：</string>
    <string name="tender_detail_product_name">产品名称：</string>
    <string name="tender_detail_tender_amount">购买金额：</string>
    <string name="tender_detail_tender_date">购买时间：</string>
    <string name="tender_detail_end_date">完成时间：</string>
    <string name="tender_detail_pay_type">付款方式：</string>
    <string name="tender_detail_status">状态：</string>
    <string name="tender_detail_order_num">交易订单号：</string>
    <string name="tender_detail_tip1">• 募集成功次日开始计算收益</string>
    <string name="tender_detail_tip2">• 到期自动还款至您的账户余额</string>
    <string name="finance_title">实时财务</string>
    <string name="finance_recycle_list">回收列表</string>
    <string name="finance_total_income">累计为用户赚取收益(元)</string>
    <string name="finance_total_deal">本年成交总额(元)</string>
    <string name="finance_payment_of_reserve">风险准备金(元)</string>
    <string name="finance_unrecovered_money">未回收风险准备金(元)</string>
    <string name="finance_recycling_money">待回收金额(元)</string>
    <string name="finance_recycled_money">已回收金额(元)</string>
    <string name="finance_recovered_money">已回收风险准备金(元)</string>
    <string name="finance_bad_rate">坏账率</string>
    <string name="finance_bad_detal_amount">坏账总金额(元)</string>
    <string name="finance_overdue_rate">逾期率</string>
    <string name="finance_overdue_amount">逾期总金额(元)</string>
    <string name="finance_overdue_unpay_amount">逾期未归还金额(元)</string>
    <string name="finance_charitable_funds">慈善基金总额(元)</string>
    <string name="finance_today_amount">今日成交(元)</string>
    <string name="finance_yesterday_amount">昨日成交(元)</string>
    <string name="finance_thismonth_amount">本月成交(元)</string>
    <string name="finance_prevmonth_amount">上月成交(元)</string>
    <string name="recycle_list_this_week_amount">一周内应归还总额：</string>
    <string name="recycle_list_returned">已归还：</string>
    <string name="recycle_list_unreturn">未归还：</string>
    <string name="recycle_list_return_date">应归还日期：</string>
    <string name="recycle_list_return_money">应归还金额</string>
    <string name="recycle_list_overdue_collection">逾期催收</string>
    <string name="recycle_list_repayment_screenshot">还款截图</string>
    <string name="drawcash1_bank_tip1">为了安全考虑，必须体现至绑定银行卡上</string>
    <string name="drawcash1_drawcash_enable_money">账户当前可用余额:</string>
    <string name="drawcash1_drawcash_money">输入提现金额</string>
    <string name="drawcash1_deal_pwd">交易密码</string>
    <string name="drawcash1_forget_deal_pwd">忘记交易密码</string>
    <string name="drawcash1_tip">如需自动投标功能，请保留¥50在账户中</string>
    <string name="max">最大</string>
    <string name="drawcash2_drawcash_money">本次提现金额</string>
    <string name="drawcash2_drawcash_fee">单笔手续费</string>
    <string name="drawcash2_service_fee">服务费</string>
    <string name="drawcash2_take_service_fee">收取服务费部分</string>
    <string name="drawcash2_balance">提现后账户可用余额</string>
    <string name="drawcash2_use_score">积分抵扣手续费</string>
    <string name="drawcash2_available_score">可用积分：</string>
    <string name="drawcash2_need_score">需要：</string>
    <string name="drawcash2_commit">确认提现</string>
    <string name="drawcash_result_fail">提现申请提交失败</string>
    <string name="drawcash_result_dealing">等待处理</string>
    <string name="recharge_record_title">充值记录</string>
    <string name="recharge_record_charge">充值</string>
    <string name="recharge_record_pay">支  付</string>
    <string name="recharge_title">充值</string>
    <string name="recharge_money">单笔金额应大于1元</string>
    <string name="recharge_useable_money">账户当前可用余额:</string>
    <string name="recharge_recharged_money">充值后金额</string>
    <string name="recharge_choose_bank">选择银行</string>
    <string name="recharge_next_step">下一步</string>
    <string name="recharge_tips">一起好温馨提示</string>
    <string name="recharge_tips_content">充值未投标而申请提现，要收取提现金额1%的服务费，您确定要进行充值？</string>
    <string name="recharge_tips2">友情提示：\n
1、所有投标保证金将由第三方平台托管。\n
2、即时充值所产生的费用，由一起好平台承担。\n
3、请使用本人常用银行卡充值提现，以免造成不便。\n
4、如果充值金额没有及时到账，请确定银行扣款后联系客服核实。\n
5、充值进来的资金，若不投资，24小时后才可提现，收取0.5%服务费。</string>
    <string name="drawch_tips2">友情提示：\n
1、投资回款提现2元/笔，单笔上限100万元。可用积分抵扣提现费用： 白金、金牌160分，银牌200分。\n
2、提现于每日下午三点集中处理，如您使用的是六大银行（工行、建行、招行、中行、农行、交行）银行卡，处理成功后一般2小时内到账；非六大行提现需要T+1个工作日，周六、周日及法定节假日顺延。\n
3、具体到账时间以第三方及银行处理为准。</string>
    <string name="recharge_tips2_content">近期标量较少，请谨慎充值，以免资金闲置</string>
    <string name="choose_recharge_bank_title">选择充值银行</string>
    <string name="pay_webview_complete">完成支付</string>
    <string name="funds_record_total_asserts">总资产(元)</string>
    <string name="funds_record_amount_balance">账户余额</string>
    <string name="funds_record_wait_money">待收金额</string>
    <string name="invite_reward_record_total_reward">已得奖励总额</string>
    <string name="invite_reward_record_total_num">累计人数</string>
    <string name="invite_reward_record_success_num">成功人数</string>
    <string name="my_invest_wait_amount">待回收金额(元)</string>
    <string name="my_invest_wait_interest">待收利息</string>
    <string name="my_invest_wait_principal">待收本金</string>
    <string name="my_invest_next_repay_date">下一还款日:</string>
    <string name="my_invest_return_principal_and_interest">回收本息(元)</string>
    <string name="old_login_pwd">原登录密码</string>
    <string name="new_login_pwd">新登录密码</string>
    <string name="confirm_new_login_pwd">确认新登录密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="modify">修改</string>
    <string name="setting">设置</string>
    <string name="old_pay_pwd">原支付密码</string>
    <string name="new_pay_pwd">新支付密码</string>
    <string name="confirm_new_pay_pwd">确认支付密码</string>
    <string name="setting_new_pay_pwd">设置支付密码</string>
    <string name="find_pay_pwd">找回支付密码</string>
    <string name="find_pay_pwd_promt">已向%1$s发送短信，请注意查收</string>
    <string name="cet_cockpit">驾驶舱</string>
    <string name="cet_data">数据</string>
    <string name="cet_equipment">设备</string>
    <string name="cet_my">我的</string>
    <string name="cet_login_username">请输入用户名</string>
    <string name="cet_login_psw">请输入密码</string>
    <string name="cet_login_regist">注册</string>
    <string name="cet_login_forget_psw">忘记密码</string>
    <string name="cet_login_login">登录</string>
    <string name="cet_search_hint">搜索感兴趣的内容</string>
    <string name="cet_realtime_input">输入端:</string>
    <string name="cet_realtime_output">输出端:</string>
    <string name="cet_realtime_avoltage">A相电压:%1$s</string>
    <string name="cet_realtime_bvoltage">B相电压:%1$s</string>
    <string name="cet_realtime_cvoltage">C相电压:%1$s</string>
    <string name="cet_realtime_acurrent">A相电流:%1$s</string>
    <string name="cet_realtime_bcurrent">B相电流:%1$s</string>
    <string name="cet_realtime_ccurrent">C相电流:%1$s</string>
    <string name="cet_realtime_apower">A相功率因数:%1$s</string>
    <string name="cet_realtime_bpower">B相功率因数:%1$s</string>
    <string name="cet_realtime_cpower">C相功率因数:%1$s</string>
    <string name="cet_realtime_voltage_adjust">调压档位:%1$s</string>
    <string name="cet_realtime_nopower">无功投入:%1$s</string>
    <string name="cet_my_collect_update_psw">修改密码</string>
    <string name="cet_my_set_complete">完 成</string>
    <string name="cet_my_old_psw">旧密码</string>
    <string name="cet_my_set_old_psw">请填写旧密码</string>
    <string name="cet_my_new_psw">新密码</string>
    <string name="cet_my_input_new_psw">至少6个字符，包含字母和数字</string>
    <string name="cet_my_confirm_psw">确认密码</string>
    <string name="cet_my_input_new_psw_again">再次输入新密码</string>
</resources>