<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    >

    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="match_parent"
        android:background="@color/cet_main_bg_color"
        android:layout_height="55dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RadioButton
            style="@style/main_tab_style"
            android:checked="true"
            android:id="@+id/main_cockpit_tab"
            android:drawableTop="@drawable/cet_cockpit_tab"
            android:text="@string/cet_cockpit"
            android:textColor="@drawable/main_tab_text"
            android:textSize="@dimen/text_size_12" />

        <RadioButton
            style="@style/main_tab_style"
            android:id="@+id/main_data_tab"
            android:drawableTop="@drawable/cet_data_tab"
            android:text="@string/cet_data"
            android:textColor="@drawable/main_tab_text"
            android:textSize="@dimen/text_size_12" />

        <RadioButton

            style="@style/main_tab_style"
            android:id="@+id/main_equipment_tab"
            android:drawableTop="@drawable/cet_equipment_tab"
            android:text="@string/cet_equipment"
            android:textColor="@drawable/main_tab_text"
            android:textSize="@dimen/text_size_12" />

        <RadioButton
            style="@style/main_tab_style"
            android:id="@+id/main_my_tab"
            android:drawableTop="@drawable/cet_my_tab"
            android:text="@string/cet_my"
            android:textColor="@drawable/main_tab_text"
            android:textSize="@dimen/text_size_12" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_radio"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp" />

</RelativeLayout>