<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cet_search_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/cet_data_realtime_search_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:background="@color/transparent"
            android:hint="@string/cet_search_hint"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/cet_data_realtime_search_iv"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/seach_button" />
    </RelativeLayout>

    <TextView
        android:id="@+id/cet_data_realtime_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cet_main_bg_color"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="武汉花山台区"
        android:textColor="@color/cet_main_select_color"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@color/cet_main_select_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/cet_realtime_input"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@color/cet_main_select_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/cet_realtime_output"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_avoltage"
            android:text="@string/cet_realtime_avoltage"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_avoltage"
            android:text="@string/cet_realtime_avoltage"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_bvoltage"
            android:text="@string/cet_realtime_bvoltage"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_bvoltage"
            android:text="@string/cet_realtime_bvoltage"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_cvoltage"
            android:text="@string/cet_realtime_cvoltage"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_cvoltage"
            android:text="@string/cet_realtime_cvoltage"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_acurrent"
            android:text="@string/cet_realtime_acurrent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_acurrent"
            android:text="@string/cet_realtime_acurrent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_bcurrent"
            android:text="@string/cet_realtime_bcurrent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_bcurrent"
            android:text="@string/cet_realtime_bcurrent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_ccurrent"
            android:text="@string/cet_realtime_ccurrent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_ccurrent"
            android:text="@string/cet_realtime_ccurrent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_apower"
            android:text="@string/cet_realtime_apower"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_apower"
            android:text="@string/cet_realtime_apower"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_bpower"
            android:text="@string/cet_realtime_bpower"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_bpower"
            android:text="@string/cet_realtime_bpower"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cet_realtime_input_cpower"
            android:text="@string/cet_realtime_apower"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cet_realtime_out_cpower"
            android:text="@string/cet_realtime_cpower"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@color/cet_main_select_color" />

            <TextView
                android:id="@+id/cet_realtime_voltage_adjust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/cet_realtime_voltage_adjust"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@color/cet_main_select_color" />

            <TextView
                android:id="@+id/cet_realtime_nopower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/cet_realtime_nopower"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
